--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-dev-client": "^1.0.1",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "rc-input-number": "^7.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
