--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "rocketseat.rocketseatreactnative"
+        "rocketseat.rocketseatreactnative",
+        "rocketseat.RocketseatReactJS"
     ]
 }
