--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-bouncy-checkbox": "^3.0.0",
+    "react-native-bouncy-checkbox-group": "^0.1.0",
     "react-native-date-picker": "^4.2.5",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-modal": "^13.0.1",
