--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-community/datetimepicker": "^6.1.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "add": "^2.0.6",
     "expo": "~45.0.0",
@@ -32,6 +33,7 @@
     "react-native-modalize": "^2.0.13",
     "react-native-paper": "^3.12.0",
     "react-native-paper-dates": "^0.8.7",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
